--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
   "id": "ec",
   "documentName": "Donne Letter",
-  "iiifManifest": "/donne/iiif/manifest.json",
+  "iiifManifest": "/donne/donne/iiif/manifest.json",
   "transcriptionTypes": {
     "transcription": "transcription"
   },
